--- a/editor/translations/zh_CN.po
+++ b/editor/translations/zh_CN.po
@@ -59,11 +59,12 @@
 # king <wangding1992@126.com>, 2019.
 # silentbird <silentbird520@outlook.com>, 2019.
 # Haoyu Qiu <timothyqiu32@gmail.com>, 2019, 2020.
+# Revan Ji <jiruifancr@gmail.com>, 2020.
 msgid ""
 msgstr ""
 "Project-Id-Version: Chinese (Simplified) (Godot Engine)\n"
 "POT-Creation-Date: 2018-01-20 12:15+0200\n"
-"PO-Revision-Date: 2020-01-27 07:10+0000\n"
+"PO-Revision-Date: 2020-02-14 03:19+0000\n"
 "Last-Translator: Haoyu Qiu <timothyqiu32@gmail.com>\n"
 "Language-Team: Chinese (Simplified) <https://hosted.weblate.org/projects/"
 "godot-engine/godot/zh_Hans/>\n"
@@ -354,7 +355,7 @@ msgstr "线性"
 
 #: editor/animation_track_editor.cpp
 msgid "Cubic"
-msgstr "立方体"
+msgstr "三次方"
 
 #: editor/animation_track_editor.cpp
 msgid "Clamp Loop Interp"
@@ -1801,7 +1802,7 @@ msgstr "在文件管理器中显示"
 
 #: editor/editor_file_dialog.cpp editor/filesystem_dock.cpp
 msgid "New Folder..."
-msgstr "新建文件夹 ..."
+msgstr "新建文件夹..."
 
 #: editor/editor_file_dialog.cpp
 #: editor/plugins/version_control_editor_plugin.cpp
@@ -1814,7 +1815,7 @@ msgstr "所有可用类型"
 
 #: editor/editor_file_dialog.cpp scene/gui/file_dialog.cpp
 msgid "All Files (*)"
-msgstr "所有文件(*)"
+msgstr "所有文件（*）"
 
 #: editor/editor_file_dialog.cpp scene/gui/file_dialog.cpp
 msgid "Open a File"
@@ -2334,8 +2335,8 @@ msgid ""
 "Please read the documentation relevant to debugging to better understand "
 "this workflow."
 msgstr ""
-"这是一个远程对象，因此不会保留对其的更改。 请阅读与调试相关的文档，以更好地了"
-"解此工作流程。"
+"这是远程对象，因此不会保留对其的更改。\n"
+"请阅读与调试相关的文档，以更好地了解此工作流程。"
 
 #: editor/editor_node.cpp
 msgid "There is no defined scene to run."
@@ -3131,11 +3132,11 @@ msgstr "更新"
 #: editor/editor_plugin_settings.cpp editor/plugin_config_dialog.cpp
 #: editor/plugins/asset_library_editor_plugin.cpp
 msgid "Version:"
-msgstr "版本:"
+msgstr "版本："
 
 #: editor/editor_plugin_settings.cpp editor/plugin_config_dialog.cpp
 msgid "Author:"
-msgstr "作者:"
+msgstr "作者："
 
 #: editor/editor_plugin_settings.cpp
 msgid "Status:"
@@ -3147,7 +3148,7 @@ msgstr "编辑："
 
 #: editor/editor_profiler.cpp
 msgid "Measure:"
-msgstr "测量:"
+msgstr "测量："
 
 #: editor/editor_profiler.cpp
 msgid "Frame Time (sec)"
@@ -3207,7 +3208,7 @@ msgstr "[空]"
 
 #: editor/editor_properties.cpp editor/plugins/root_motion_editor_plugin.cpp
 msgid "Assign..."
-msgstr "分配..."
+msgstr "指定..."
 
 #: editor/editor_properties.cpp
 msgid "Invalid RID"
@@ -3217,7 +3218,7 @@ msgstr "无效的RID"
 msgid ""
 "The selected resource (%s) does not match any type expected for this "
 "property (%s)."
-msgstr "被选择的资源（%s）并不能匹配此属性（%s）应有的类型。"
+msgstr "所选资源（%s）与该属性（%s）所需的类型都不匹配。"
 
 #: editor/editor_properties.cpp
 msgid ""
@@ -3346,11 +3347,11 @@ msgstr "浏览"
 
 #: editor/editor_sub_scene.cpp
 msgid "Scene Path:"
-msgstr "场景路径:"
+msgstr "场景路径："
 
 #: editor/editor_sub_scene.cpp
 msgid "Import From Node:"
-msgstr "从节点中导入:"
+msgstr "从节点中导入："
 
 #: editor/export_template_manager.cpp
 msgid "Redownload"
@@ -3387,7 +3388,7 @@ msgstr "检索镜像，请等待..."
 
 #: editor/export_template_manager.cpp
 msgid "Remove template version '%s'?"
-msgstr "移除版本为 '%s' 的模板?"
+msgstr "是否移除版本为“%s”的模板？"
 
 #: editor/export_template_manager.cpp
 msgid "Can't open export templates zip."
@@ -3403,7 +3404,7 @@ msgstr "模板中没有找到version.txt文件。"
 
 #: editor/export_template_manager.cpp
 msgid "Error creating path for templates:"
-msgstr "创建模板文件路径出错:"
+msgstr "创建模板文件路径出错："
 
 #: editor/export_template_manager.cpp
 msgid "Extracting Export Templates"
@@ -3411,7 +3412,7 @@ msgstr "正在解压导出模板"
 
 #: editor/export_template_manager.cpp
 msgid "Importing:"
-msgstr "导入:"
+msgstr "正在导入："
 
 #: editor/export_template_manager.cpp
 msgid "Error getting the list of mirrors."
@@ -3430,7 +3431,7 @@ msgstr "没有找到这个版本的下载链接。直接下载只适用于正式
 #: editor/export_template_manager.cpp
 #: editor/plugins/asset_library_editor_plugin.cpp
 msgid "Can't resolve."
-msgstr "无法解析."
+msgstr "无法解析。"
 
 #: editor/export_template_manager.cpp
 #: editor/plugins/asset_library_editor_plugin.cpp
@@ -3453,7 +3454,7 @@ msgstr "循环重定向。"
 #: editor/export_template_manager.cpp
 #: editor/plugins/asset_library_editor_plugin.cpp
 msgid "Failed:"
-msgstr "失败:"
+msgstr "失败："
 
 #: editor/export_template_manager.cpp
 msgid "Download Complete."
@@ -3461,21 +3462,23 @@ msgstr "下载完成。"
 
 #: editor/export_template_manager.cpp
 msgid "Cannot remove temporary file:"
-msgstr "无法移除临时文件:"
+msgstr "无法移除临时文件："
 
 #: editor/export_template_manager.cpp
 msgid ""
 "Templates installation failed.\n"
 "The problematic templates archives can be found at '%s'."
-msgstr "模板安装失败。有问题的模板文档在 '%s' 。"
+msgstr ""
+"模板安装失败。\n"
+"有问题的模板文档在“%s”。"
 
 #: editor/export_template_manager.cpp
 msgid "Error requesting URL:"
-msgstr "错误的请求链接:"
+msgstr "请求URL时出错："
 
 #: editor/export_template_manager.cpp
 msgid "Connecting to Mirror..."
-msgstr "正在连接镜像网站。。"
+msgstr "正在连接镜像网站..."
 
 #: editor/export_template_manager.cpp
 msgid "Disconnected"
@@ -3525,11 +3528,11 @@ msgstr "无压缩的Android Build资源"
 
 #: editor/export_template_manager.cpp
 msgid "Current Version:"
-msgstr "当前版本:"
+msgstr "当前版本："
 
 #: editor/export_template_manager.cpp
 msgid "Installed Versions:"
-msgstr "已安装版本:"
+msgstr "已安装版本："
 
 #: editor/export_template_manager.cpp
 msgid "Install From File"
@@ -3565,7 +3568,7 @@ msgstr "收藏"
 
 #: editor/filesystem_dock.cpp
 msgid "Status: Import of file failed. Please fix file and reimport manually."
-msgstr "状态: 导入文件失败。请手动修复文件后重新导入。"
+msgstr "状态：导入文件失败。请手动修复文件后重新导入。"
 
 #: editor/filesystem_dock.cpp
 msgid "Cannot move/rename resources root."
@@ -3577,15 +3580,15 @@ msgstr "无法将文件夹移动到其自身。"
 
 #: editor/filesystem_dock.cpp
 msgid "Error moving:"
-msgstr "移动出错:"
+msgstr "移动出错："
 
 #: editor/filesystem_dock.cpp
 msgid "Error duplicating:"
-msgstr "复制出错:"
+msgstr "复制出错："
 
 #: editor/filesystem_dock.cpp
 msgid "Unable to update dependencies:"
-msgstr "无法更新依赖:"
+msgstr "无法更新依赖："
 
 #: editor/filesystem_dock.cpp editor/scene_tree_editor.cpp
 msgid "No name provided."
@@ -3605,19 +3608,19 @@ msgstr "名称包含无效字符。"
 
 #: editor/filesystem_dock.cpp
 msgid "Renaming file:"
-msgstr "重命名文件:"
+msgstr "重命名文件："
 
 #: editor/filesystem_dock.cpp
 msgid "Renaming folder:"
-msgstr "重命名文件夹:"
+msgstr "重命名文件夹："
 
 #: editor/filesystem_dock.cpp
 msgid "Duplicating file:"
-msgstr "拷贝文件:"
+msgstr "拷贝文件："
 
 #: editor/filesystem_dock.cpp
 msgid "Duplicating folder:"
-msgstr "复制文件夹:"
+msgstr "复制文件夹："
 
 #: editor/filesystem_dock.cpp
 msgid "New Inherited Scene"
@@ -5247,22 +5250,22 @@ msgstr ""
 #: editor/plugins/canvas_item_editor_plugin.cpp
 #: editor/plugins/spatial_editor_plugin.cpp
 msgid "Lock Selected"
-msgstr "锁定选定"
+msgstr "锁定所选项"
 
 #: editor/plugins/canvas_item_editor_plugin.cpp
 #: editor/plugins/spatial_editor_plugin.cpp
 msgid "Unlock Selected"
-msgstr "解锁所选"
+msgstr "解锁所选项"
 
 #: editor/plugins/canvas_item_editor_plugin.cpp
 #: editor/plugins/spatial_editor_plugin.cpp
 msgid "Group Selected"
-msgstr "分组选择"
+msgstr "编组所选项"
 
 #: editor/plugins/canvas_item_editor_plugin.cpp
 #: editor/plugins/spatial_editor_plugin.cpp
 msgid "Ungroup Selected"
-msgstr "取消选定分组"
+msgstr "解组所选项"
 
 #: editor/plugins/canvas_item_editor_plugin.cpp
 msgid "Paste Pose"
@@ -5647,7 +5650,7 @@ msgstr "生成顶点计数:"
 #: editor/plugins/cpu_particles_2d_editor_plugin.cpp
 #: editor/plugins/particles_2d_editor_plugin.cpp
 msgid "Emission Mask"
-msgstr "发射遮罩"
+msgstr "Emission Mask(发射遮挡)"
 
 #: editor/plugins/cpu_particles_2d_editor_plugin.cpp
 #: editor/plugins/particles_2d_editor_plugin.cpp
@@ -5672,7 +5675,7 @@ msgstr "从像素捕获"
 #: editor/plugins/cpu_particles_2d_editor_plugin.cpp
 #: editor/plugins/particles_2d_editor_plugin.cpp
 msgid "Emission Colors"
-msgstr "发光颜色"
+msgstr "Emission Colors(发射颜色)"
 
 #: editor/plugins/cpu_particles_editor_plugin.cpp
 msgid "CPUParticles"
@@ -7839,7 +7842,7 @@ msgstr "字体"
 
 #: editor/plugins/theme_editor_plugin.cpp
 msgid "Color"
-msgstr "颜色"
+msgstr "Color(颜色)"
 
 #: editor/plugins/theme_editor_plugin.cpp
 msgid "Theme File"
