--- a/editor/translations/zh_TW.po
+++ b/editor/translations/zh_TW.po
@@ -23,7 +23,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Godot Engine editor\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2020-01-11 03:05+0000\n"
+"PO-Revision-Date: 2020-01-30 03:56+0000\n"
 "Last-Translator: 鄭惟中 <biglionlion06@gmail.com>\n"
 "Language-Team: Chinese (Traditional) <https://hosted.weblate.org/projects/"
 "godot-engine/godot/zh_Hant/>\n"
@@ -32,7 +32,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 3.10.1\n"
+"X-Generator: Weblate 3.11-dev\n"
 
 #: core/math/expression.cpp modules/gdscript/gdscript_functions.cpp
 #: modules/visual_script/visual_script_builtin_funcs.cpp
@@ -41,7 +41,7 @@ msgstr "Convert()函數所收到的參數錯誤，請用 TYPE_* 常數。"
 
 #: core/math/expression.cpp modules/gdscript/gdscript_functions.cpp
 msgid "Expected a string of length 1 (a character)."
-msgstr "應為一個長度是1(一個字元)的字串"
+msgstr "應為一個長度是1(一個字元)的字串。"
 
 #: core/math/expression.cpp modules/gdscript/gdscript_functions.cpp
 #: modules/mono/glue/gd_glue.cpp
@@ -142,9 +142,8 @@ msgid "Add Bezier Point"
 msgstr "添加貝塞爾點"
 
 #: editor/animation_bezier_editor.cpp
-#, fuzzy
 msgid "Move Bezier Points"
-msgstr "移動貝塞爾點"
+msgstr "移動Bezier點"
 
 #: editor/animation_bezier_editor.cpp editor/animation_track_editor.cpp
 msgid "Anim Duplicate Keys"
@@ -333,11 +332,11 @@ msgstr "立方體"
 
 #: editor/animation_track_editor.cpp
 msgid "Clamp Loop Interp"
-msgstr ""
+msgstr "Clamp式內插循環"
 
 #: editor/animation_track_editor.cpp
 msgid "Wrap Loop Interp"
-msgstr ""
+msgstr "Wrap式內插循環"
 
 #: editor/animation_track_editor.cpp
 #: editor/plugins/canvas_item_editor_plugin.cpp
@@ -398,7 +397,7 @@ msgstr "插入動畫"
 
 #: editor/animation_track_editor.cpp
 msgid "AnimationPlayer can't animate itself, only other players."
-msgstr ""
+msgstr "AnimationPlayer不能被自己所啟動，必須由其他player啟動。"
 
 #: editor/animation_track_editor.cpp
 msgid "Anim Create & Insert"
@@ -424,7 +423,7 @@ msgstr "重新排列 Autoload"
 
 #: editor/animation_track_editor.cpp
 msgid "Transform tracks only apply to Spatial-based nodes."
-msgstr ""
+msgstr "Transform軌只能添加在spatial為主的節點。"
 
 #: editor/animation_track_editor.cpp
 msgid ""
@@ -452,7 +451,7 @@ msgstr "無法添加沒有根目錄的新曲目"
 
 #: editor/animation_track_editor.cpp
 msgid "Invalid track for Bezier (no suitable sub-properties)"
-msgstr ""
+msgstr "此軌不能用於Bezier(子屬性不適合)"
 
 #: editor/animation_track_editor.cpp
 #, fuzzy
@@ -637,9 +636,8 @@ msgid "Use Bezier Curves"
 msgstr "使用貝塞爾曲線"
 
 #: editor/animation_track_editor.cpp
-#, fuzzy
 msgid "Anim. Optimizer"
-msgstr "動畫. 最佳化"
+msgstr "動畫最佳化"
 
 #: editor/animation_track_editor.cpp
 msgid "Max. Linear Error:"
@@ -965,9 +963,8 @@ msgid "Go To Method"
 msgstr "前往方法"
 
 #: editor/create_dialog.cpp
-#, fuzzy
 msgid "Change %s Type"
-msgstr "變更 %s 尺寸"
+msgstr "變更 %s 種類"
 
 #: editor/create_dialog.cpp editor/project_settings_editor.cpp
 msgid "Change"
@@ -1158,7 +1155,6 @@ msgid "Change Dictionary Value"
 msgstr "改變字典 value"
 
 #: editor/editor_about.cpp
-#, fuzzy
 msgid "Thanks from the Godot community!"
 msgstr "Godot 社群感謝你!"
 
@@ -1195,7 +1191,6 @@ msgid "Gold Sponsors"
 msgstr "黃金贊助"
 
 #: editor/editor_about.cpp
-#, fuzzy
 msgid "Mini Sponsors"
 msgstr "迷你贊助"
 
@@ -1204,12 +1199,10 @@ msgid "Gold Donors"
 msgstr "黃金捐贈者"
 
 #: editor/editor_about.cpp
-#, fuzzy
 msgid "Silver Donors"
 msgstr "白銀捐贈者"
 
 #: editor/editor_about.cpp
-#, fuzzy
 msgid "Bronze Donors"
 msgstr "紅銅捐贈者"
 
@@ -1292,7 +1285,6 @@ msgid "Install"
 msgstr "安裝"
 
 #: editor/editor_asset_installer.cpp
-#, fuzzy
 msgid "Package Installer"
 msgstr "套件安裝"
 
@@ -2034,7 +2026,7 @@ msgstr "掃描源"
 msgid ""
 "There are multiple importers for different types pointing to file %s, import "
 "aborted"
-msgstr ""
+msgstr "因為有多個不同種類importer指向檔案 %s，導入失敗"
 
 #: editor/editor_file_system.cpp
 msgid "(Re)Importing Assets"
@@ -2257,8 +2249,9 @@ msgid "Start"
 msgstr "開始"
 
 #: editor/editor_network_profiler.cpp
+#, fuzzy
 msgid "%s/s"
-msgstr ""
+msgstr "%s/s"
 
 #: editor/editor_network_profiler.cpp
 #, fuzzy
@@ -2267,7 +2260,7 @@ msgstr "下載"
 
 #: editor/editor_network_profiler.cpp
 msgid "Up"
-msgstr ""
+msgstr "上"
 
 #: editor/editor_network_profiler.cpp editor/editor_node.cpp
 #, fuzzy
@@ -2276,23 +2269,23 @@ msgstr "節點"
 
 #: editor/editor_network_profiler.cpp
 msgid "Incoming RPC"
-msgstr ""
+msgstr "進來的Rpc"
 
 #: editor/editor_network_profiler.cpp
 msgid "Incoming RSET"
-msgstr ""
+msgstr "進來的Rset"
 
 #: editor/editor_network_profiler.cpp
 msgid "Outgoing RPC"
-msgstr ""
+msgstr "出去的 RPC"
 
 #: editor/editor_network_profiler.cpp
 msgid "Outgoing RSET"
-msgstr ""
+msgstr "出去的 RSET"
 
 #: editor/editor_node.cpp editor/project_manager.cpp
 msgid "New Window"
-msgstr ""
+msgstr "新視窗"
 
 #: editor/editor_node.cpp
 msgid "Imported resources can't be saved."
@@ -2681,6 +2674,8 @@ msgid ""
 "You can change it later in \"Project Settings\" under the 'application' "
 "category."
 msgstr ""
+"選擇場景'%s'不存在，選擇另一個場景？\n"
+"你之後可以在「應用程式」分類中的「專案設定」變更這設定。"
 
 #: editor/editor_node.cpp
 msgid ""
@@ -2688,6 +2683,8 @@ msgid ""
 "You can change it later in \"Project Settings\" under the 'application' "
 "category."
 msgstr ""
+"選擇的場景'%s'不是一個場景檔案，要選擇另一個場景嗎？\n"
+"你之後可以在「應用程式」分類中的「專案設定」變更這設定。"
 
 #: editor/editor_node.cpp
 msgid "Save Layout"
@@ -2726,7 +2723,7 @@ msgstr "關閉其他選項卡"
 
 #: editor/editor_node.cpp
 msgid "Close Tabs to the Right"
-msgstr ""
+msgstr "關閉右方所有的分頁"
 
 #: editor/editor_node.cpp
 #, fuzzy
